# juan-mas-app

./: .gitignore  CLAUDE.md  DatabricksChatbot.py  README.md  TROUBLESHOOTING.md  app.py  app.yaml  demo_cli.py  model_serving_utils.py  pyproject.toml  requirements.txt  vibe-prompts.md
docs/: vibe-prompts.md
scripts/: demo_cli.py  model_serving_utils.py
src/: __init__.py
src/cli/: __init__.py  __main__.py  main.py
src/databricks/: __init__.py  sdk_wrapper.py
src/ui/: __init__.py  chatbot.py
